unpackaged/objects/Flow_Disable__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to disable flows, triggers, and validation rules</description>
    <fields>
        <fullName>DisableFlows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DisableFlows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableTriggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DisableTriggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DisableValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableWorkflows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DisableWorkflows</label>
        <type>Checkbox</type>
    </fields>
    <label>Flow Disable</label>
</CustomObject>